# ChangeLog for games-puzzle/ltris
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/ltris/ChangeLog,v 1.19 2008/03/07 19:16:33 wolf31o2 Exp $

  07 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> ltris-1.0.11.ebuild:
  QA cleanup: Fix quoting.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> ltris-1.0.11.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  04 Oct 2006; Tristan Heaven <nyhm@gentoo.org> ltris-1.0.11.ebuild:
  Use autotools eclass, bug #149960

  10 Dec 2005; Simon Stelling <blubb@gentoo.org> ltris-1.0.11.ebuild:
  stable on amd64

  14 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org> ltris-1.0.11.ebuild:
  Stable on sparc

  13 Nov 2005; Michael Hanselmann <hansmi@gentoo.org> ltris-1.0.11.ebuild:
  Stable on ppc.

  12 Nov 2005; Michael Sterrett <mr_bones_@gentoo.org> ltris-1.0.11.ebuild:
  stable for x86

*ltris-1.0.11 (09 Oct 2005)

  09 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org> +ltris-1.0.11.ebuild:
  version bump

*ltris-1.0.10 (18 Mar 2005)

  18 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> -ltris-1.0.5-r1.ebuild,
  -ltris-1.0.6.ebuild, -ltris-1.0.7.ebuild, +ltris-1.0.10.ebuild:
  security version bump (bug #85770); clean out old versions

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*ltris-1.0.7 (06 Oct 2004)

  06 Oct 2004; Michael Sterrett <mr_bones_@gentoo.org> +ltris-1.0.7.ebuild:
  version bump (bug #65687)

*ltris-1.0.6 (03 Jun 2004)

  03 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> ltris-1.0.6.ebuild:
  version bump (bug #52564)

  25 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> ltris-1.0.4.ebuild,
  ltris-1.0.5.ebuild:
  tidy older versions of ebuild

*ltris-1.0.5-r1 (25 Oct 2003)

  25 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> ltris-1.0.5-r1.ebuild,
  metadata.xml:
  put highscore in GAMES_STATEDIR; more error checking/messages; tidy