@@ -1,6 +1,11 @@
 # ChangeLog for games-puzzle/ltris
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/ltris/ChangeLog,v 1.19 2008/03/07 19:16:33 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/ltris/ChangeLog,v 1.20 2008/03/31 07:05:31 mr_bones_ Exp $
+
+*ltris-1.0.12 (31 Mar 2008)
+
+  31 Mar 2008; Michael Sterrett <mr_bones_@gentoo.org> +ltris-1.0.12.ebuild:
+  version bump
 
   07 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> ltris-1.0.11.ebuild:
   QA cleanup: Fix quoting.
